# ft-blas

./: .gitignore  CMakeLists.txt  Makefile  README  ft_blas.c  make.inc
src/: CMakeLists.txt  Makefile  dgemm.c  ft_blas.h  mmbs.c
test/: CMakeLists.txt  Makefile  dgemm_test.c
